--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <title>dtmoney</title>
   
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Red+Hat+Mono:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Red+Hat+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
